# bookstoreAPP

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  env.dev  env.example  manage.py  pyproject.toml  pytest.ini  render.yaml
.github/workflows/: build.yaml
bookstoreapp/: asgi.py  settings.py  urls.py  wsgi.py
order/: admin.py
order/migrations/: 0001_initial.py  0002_alter_order_options.py
order/models/: __init__.py  order.py
order/serializers/: order_serializer.py
order/tests/: factories.py  test_serializers.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options.py
product/models/: __init__.py  category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: factories.py  test_serializers.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
